--- a/index.html
+++ b/index.html
@@ -3,29 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Redireccionando...</title>
+    <meta http-equiv="refresh" content="0;url=pagina web.html">
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Mi Página Web</h1>
-    </header>
-    
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre Nosotros</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-
-    <section>
-        <h2>Sección de Contenido</h2>
-        <p>Esta es una página web básica con HTML y CSS.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Mi Página Web. Todos los derechos reservados.</p>
-    </footer>
+    <p>Si no eres redirigido automáticamente, haz clic <a href="pagina web.html">aquí</a>.</p>
 </body>
 </html>
