--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
 <figure>
-    <img src="file:///C:/Users/Monse/Desktop/Monse/Nombre%20y%20logo.png" alt="oh no viejo" width="621" height="175" hspace="0" vspace="0">
+    <img src="Nombre y logo.png" alt="oh no viejo" width="621" height="175" hspace="0" vspace="0">
 </figure>
      <br>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
