--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <img src="file:///C:/Users/Monse/Desktop/Monse/Captura%20de%20pantalla%202025-05-01%20224806.png" alt="oh no viejo" width="739" height="264" hspace="450" vspace="0">
 </figure>
 <figure>
-    <img src="file:///C:/Users/Monse/Desktop/Monse/Captura%20de%20pantalla%202025-05-06%20220011.png" alt="oh no viejo" width="713" height="281" hspace="0" vspace="0">
+    <img src="Valores.png" alt="oh no viejo" width="713" height="281" hspace="0" vspace="0">
 </figure>
 </div>
     <div class="content" id="tab2">
