--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="content active" id="tab1"><br>
 <h2>Brindamos una diversidad de servicios en el ámbito informático, que van desde asistencia técnica hasta la creación de software a medida. Nos comprometemos a mantenernos a la vanguardia tecnológica para proporcionar a nuestros clientes soluciones innovadoras y altamente funcionales.</h2>
 <figure>
-    <img src="file:///C:/Users/Monse/Desktop/Monse/Captura%20de%20pantalla%202025-05-01%20230946.png" alt="oh no viejo" width="749" height="310" hspace="0" vspace="0">
+    <img src="Mision.png" alt="oh no viejo" width="749" height="310" hspace="0" vspace="0">
 </figure>
 <figure>
-    <img src="file:///C:/Users/Monse/Desktop/Monse/Captura%20de%20pantalla%202025-05-01%20224806.png" alt="oh no viejo" width="739" height="264" hspace="450" vspace="0">
+    <img src="Vision.png" alt="oh no viejo" width="739" height="264" hspace="450" vspace="0">
 </figure>
 <figure>
     <img src="Valores.png" alt="oh no viejo" width="713" height="281" hspace="0" vspace="0">
