--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Servicio a domicilio disponible.
 <h4>Otros medios de comunicacion:</h4>
 - Facebook – @TechMagnificentMX
 <br>
-- Instagram – @techmagnificent.oficial
+- Instagram – <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6" target="_blank">@techmagnificent.oficial</a>
 <br>
 - Twitter/X – @TechMagnificent
 <br>
