--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ Servicio a domicilio disponible.
 <h4>Otros medios de comunicacion:</h4>
 - Facebook – @TechMagnificentMX
 <br>
+         <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6" target="_blank">Visitar sitio</a>
 - Instagram – <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6"> target="_blank"@techmagnificent.oficial</a>
 <br>
 - Twitter/X – <a href="https://x.com/techmagnificent?t=J75uhwKZSQLnzA1sgChiwQ&s=08"> target="_blank"@TechMagnificent</a>
