--- a/index.html
+++ b/index.html
@@ -134,14 +134,13 @@ Servicio a domicilio disponible.
 <h4>Otros medios de comunicacion:</h4>
 - Facebook – @TechMagnificentMX
 <br>
-        ola <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6" target="_blank">Visitar sitio</a>
-- Instagram – <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6"> target="_blank"@techmagnificent.oficial</a>
+- Instagram – <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6" target="_blank">@techmagnificent.oficial</a>
 <br>
-- Twitter/X – <a href="https://x.com/techmagnificent?t=J75uhwKZSQLnzA1sgChiwQ&s=08"> target="_blank"@TechMagnificent</a>
+- Twitter/X – <a href="https://x.com/techmagnificent?t=J75uhwKZSQLnzA1sgChiwQ&s=08" target="_blank">@TechMagnificent</a>
 <br>
-- YouTube – <a href="https://youtube.com/@techmagnificent?si=VmL1Ytv-yI9c8DD-"> target="_blank"@TechMagnificentTutorials</a>
+- YouTube – <a href="https://youtube.com/@techmagnificent?si=VmL1Ytv-yI9c8DD-" target="_blank">@TechMagnificentTutorials</a>
 <br>
-- TikTok – @techmagnificent.tips
+- TikTok – <a href="https://www.tiktok.com/@user75115360153603?_t=ZS-8wHEKGBbX4H&_r=1" target="_blank">@techmagnificent.tips</a>
 <br><br>
 </div>
     <div class="content" id="tab4">
