--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Servicio a domicilio disponible.
 ‪+52 782 194 0080‬ para llamadas
 <br>
 <h4>Otros medios de comunicacion:</h4>
-- Facebook – @TechMagnificentMX
+- Facebook – <a href="https://x.com/techmagnificent?t=J75uhwKZSQLnzA1sgChiwQ&s=08" target="_blank">techmagnificent</a>
 <br>
 - Instagram – <a href="https://www.instagram.com/techmagnificent.oficial?igsh=cDYwOXh4bnA0b2Z6" target="_blank">@techmagnificent.oficial</a>
 <br>
